--- a/src/main/webapp/reservation/reservation_create.xhtml
+++ b/src/main/webapp/reservation/reservation_create.xhtml
@@ -64,7 +64,7 @@
                                                       value="#{reservationCreate.reservation.hotel}"
                                                       styleClass="form-check-input"
                                                       enabledClass="form-check-label">
-                                        <f:selectItem itemValue="#{hotel}" itemLabel="#{hotel.name}"/>
+                                        <f:selectItem itemValue="#{hotel.id}" itemLabel="#{hotel.name}"/>
                                     </h:selectOneRadio>
                                 </div>
                             </ui:repeat>
