--- a/src/main/webapp/hotel/hotel_list.xhtml
+++ b/src/main/webapp/hotel/hotel_list.xhtml
@@ -7,27 +7,27 @@
 
     <ui:define name="content">
         <article class="text--justified">
-            <header><h2>Hotels</h2></header>
+            <header><h2>#{msg.hotels}</h2></header>
 
             <h:dataTable value="#{hotelsList.hotels.hotels}" var="hotel"
                          styleClass="table align-middle mb-0 bg-white" headerClass="bg-light">
 
                 <h:column>
-                    <f:facet name="header">Name</f:facet>
+                    <f:facet name="header">#{msg.name}</f:facet>
                     <h:outputText value="#{hotel.name}"/>
                 </h:column>
 
                 <h:column>
-                    <f:facet name="header">View</f:facet>
+                    <f:facet name="header">#{msg.view}</f:facet>
                     <h:link outcome="/hotel/hotel_view.xhtml" value="View">
                         <f:param name="id" value="#{hotel.id}"/>
                     </h:link>
                 </h:column>
 
                 <h:column>
-                    <f:facet name="header">Delete</f:facet>
+                    <f:facet name="header">#{msg.delete}</f:facet>
                     <h:form>
-                        <h:commandButton styleClass="btn" value="Delete"
+                        <h:commandButton styleClass="btn" value="#{msg.delete}" rendered="#{facesContext.externalContext.isUserInRole('admin')}"
                                          action="#{hotelsList.delete(hotel)}"/>
                     </h:form>
                 </h:column>
