--- a/src/main/webapp/reservation/reservation_view.xhtml
+++ b/src/main/webapp/reservation/reservation_view.xhtml
@@ -18,7 +18,7 @@
                     <div class="col-4">
                         <div class="row mb-2">
                             <div class="col-6">
-                                Start time
+                                #{msg.startTime}
                             </div>
                             <div class="col-6">
                                 <h:outputText value="#{reservationView.reservation.startTime}"/>
@@ -27,7 +27,7 @@
 
                         <div class="row mb-2">
                             <div class="col-6">
-                                End time
+                                #{msg.endTime}
                             </div>
                             <div class="col-6">
                                 <h:outputText value="#{reservationView.reservation.endTime}"/>
@@ -36,7 +36,7 @@
 
                         <div class="row mb-2">
                             <div class="col-6">
-                                Status
+                                #{msg.statuses}
                             </div>
                             <div class="col-6">
                                 <h:outputText value="#{reservationView.reservation.status}"/>
