--- a/src/main/webapp/hotel/hotel_list.xhtml
+++ b/src/main/webapp/hotel/hotel_list.xhtml
@@ -9,7 +9,7 @@
         <article class="text--justified">
             <header><h2>#{msg.hotels}</h2></header>
 
-            <h:dataTable value="#{hotelsList.hotels.hotels}" var="hotel"
+            <h:dataTable id="hotelTable" value="#{hotelsList.hotels.hotels}" var="hotel"
                          styleClass="table align-middle mb-0 bg-white" headerClass="bg-light">
 
                 <h:column>
@@ -28,7 +28,9 @@
                     <f:facet name="header">#{msg.delete}</f:facet>
                     <h:form>
                         <h:commandButton styleClass="btn" value="#{msg.delete}" rendered="#{facesContext.externalContext.isUserInRole('admin')}"
-                                         action="#{hotelsList.delete(hotel)}"/>
+                                         action="#{hotelsList.delete(hotel)}">
+                            <f:ajax execute="@this" render=":hotelTable"/>
+                        </h:commandButton>
                     </h:form>
                 </h:column>
 
