--- a/src/main/webapp/reservation/reservation_edit.xhtml
+++ b/src/main/webapp/reservation/reservation_edit.xhtml
@@ -43,7 +43,11 @@
                         </fieldset>
                     </div>
                 </div>
-
+                <div class="row">
+                    <div class="col-4 p-2">
+                        <h:messages/>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-2 p-2 text-center">
                         <h:commandButton styleClass="btn btn-primary" value="Update"
